--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# DS_Store
+**.DS_Store
+
 -# Byte-compiled / optimized / DLL files
  -__pycache__/
  -*.py[cod]
@@ -68,7 +71,7 @@
  -target/
  -
  -# Jupyter Notebook
- -.ipynb_checkpoints
+ -**.ipynb_checkpoints
  -
  -# pyenv
  -.python-version
